// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesignMyNight Firmdale The Soho Hotel retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 9900000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.designmynight.com/london/whats-on/film-screenings/fashion-cinema-sense-and-sensibility#:~:text=Fashion%2520%2526%2520Cinema%253A%2520Sense%2520and%2520Sensibility",
        "format": {},
        "notes": "",
        "status": {
          "soldOut": false,
        },
        "time": 1790521200000,
      },
    ],
    "showingId": "designmynight.com-6a7afc934e4ace1f921eb366",
    "title": "Fashion & Cinema: Sense and Sensibility",
    "url": "https://www.designmynight.com/london/whats-on/film-screenings/fashion-cinema-sense-and-sensibility#:~:text=Fashion%20%26%20Cinema%3A%20Sense%20and%20Sensibility",
  },
]
`;

exports[`DesignMyNight Rivoli Ballroom retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.designmynight.com/london/whats-on/halloween-party/halloween-cinema-the-rocky-horror-picture-show#:~:text=Halloween%2520Cinema%2520-%2520The%2520Rocky%2520Horror%2520Picture%2520Show",
        "format": {},
        "notes": "",
        "status": {
          "soldOut": false,
        },
        "time": 1793390400000,
      },
    ],
    "showingId": "designmynight.com-6a453c940d9a6360016e630b",
    "title": "Halloween Cinema - The Rocky Horror Picture Show",
    "url": "https://www.designmynight.com/london/whats-on/halloween-party/halloween-cinema-the-rocky-horror-picture-show#:~:text=Halloween%20Cinema%20-%20The%20Rocky%20Horror%20Picture%20Show",
  },
]
`;

exports[`DesignMyNight The Fellowship Cinema retrieve and find events 1`] = `[]`;
